# ocupacao_de_depositos

./: .gitignore  app.py  pyproject.toml  teste.py
